image_url & price
